syntax = "proto3";

package cart;

service CartService {
    rpc AddItem(AddItemRequest) returns (Cart){}
    rpc RemoveItem(RemoveItemRequest) returns (Cart){}
    rpc GetCart(GetCartRequest) returns (Cart){}
    rpc UpdateCart(UpdateCartRequest) returns (Cart){}
}

message CartItem {
    int32 productId = 1;
    int32 quantity = 2;
    double price = 3;
}

message Cart {
    string userId = 1;
    repeated CartItem items = 2;
    double total = 3;
}

message AddItemRequest {
    string userId = 1;
    int32 productId = 2;
    int32 quantity = 3;
}

message RemoveItemRequest {
    string userId = 1;
    int32 productId = 2;
}

message GetCartRequest {
    string userId = 1;
}

message UpdateCartRequest {
    string userId = 1;
    string productId = 2;
    int32 quantity = 3;
}